Added sample.css updated sample.html

--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,6 @@
 	</head>
 
 	<body>
-		<p>Tangina </p>
-	</body>
+		<p style:"background-color: blue; color: white">Tangina </p>
+	</body> 
 </html>
