Change sample html

--- a/sample.html
+++ b/sample.html
@@ -5,5 +5,6 @@
 
 	<body>
 		<p style:"background-color: blue; color: white">Tangina </p>
+		<p style:"background-color: blue; color: white">Tangina mo rin </p>
 	</body> 
 </html>
