--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,6 @@
 	</head>
 
 	<body>
-		<p style:"background-color: blue; color: white">Tangina </p>
+		<p style:"background-color: blue; color: white">Pogi ni Kenley</p>
 	</body> 
 </html>
