--- a/sample.html
+++ b/sample.html
@@ -1,10 +1,13 @@
 <html>
+	
+	
 	<head>
+		<link rel="stylesheet" href="sample.css">
 		<title> Trial HTML File</title>
 	</head>
 
 	<body>
-		<p style:"background-color: blue; color: white">Tangina </p>
-		<p style:"background-color: blue; color: white">Tangina mo rin </p>
+		<p>Tangina </p>
+		<p>Tangina mo rin </p>
 	</body> 
 </html>
