--- a/sample.html
+++ b/sample.html
@@ -10,5 +10,6 @@
 		<p style:"background-color: blue; color: white">Pogi ni Kenley</p>
 		<p style:"background-color: blue; color: white">Tangina </p>
 		<p style:"background-color: blue; color: white">Tangina mo rin </p>
+		<p style:"background-color: blue; color: white">Pogi ni Tio </p>
 	</body> 
 </html>
