added China.jpg, lmao.ks and modified sample.html

--- a/sample.html
+++ b/sample.html
@@ -7,8 +7,8 @@
 	</head>
 
 	<body>
-		<p style:"background-color: blue; color: white">Pogi ni Kenley</p>
-		<p style:"background-color: blue; color: white">Tangina </p>
-		<p style:"background-color: blue; color: white">Tangina mo rin </p>
+		<p style="background-color: blue; color: white">Pogi ni Kenley</p>
+		<p style="background-color: blue; color: white">Tangina </p>
+		<p style="background-color: blue; color: white">Tangina mo rin </p>
 	</body> 
 </html>
